# GPT-CAS

./: .gitignore  CMakeLists.txt  DESIGN.md  HANDOFF.md  README.md  ROADMAP.md  pyproject.toml
benchmarks/: kernel_benchmark.cpp
cmake/: FindGMP.cmake  laughableengineConfig.cmake.in
dist-0.3/: laughableengine-0.3.0-cp313-cp313-macosx_15_0_arm64.whl
examples/: e10_direct.py
include/laughableengine/: candidate_executor.hpp  certificate.hpp  compiled_quotient.hpp  cotangent_h1.hpp  cycle_audit.hpp  discovery.hpp  field.hpp  finite_algebra.hpp  groebner.hpp  h1.hpp  ideal.hpp  incremental_sparse_row_space.hpp  inverse_discovery.hpp  inverse_system.hpp  laughableengine.hpp  linear_algebra.hpp  matrix.hpp  matrix_space.hpp  packed_polynomial.hpp  packed_prime.hpp  parser.hpp  polynomial.hpp  quotient.hpp  quotient_context.hpp  reconstruction.hpp  sparse_matrix.hpp  truncated_monomial_space.hpp
python/: bindings.cpp
python/laughableengine/: __init__.py
src/: cli.cpp
tests/: candidate_executor.cpp  certificate.cpp  cli_test.cmake  cotangent_h1.cpp  cycle_audit.cpp  discovery.cpp  e10_cotangent_h1.cpp  e10_fixture.cpp  finite_algebra.cpp  groebner.cpp  h1.cpp  ideal.cpp  incremental_sparse_row_space.cpp  independent_verifier_test.py  inverse_discovery.cpp  inverse_system.cpp  linear_algebra.cpp  matrix.cpp  matrix_space.cpp  packed_discovery.cpp  parser.cpp  quotient.cpp  quotient_context.cpp  reconstruction.cpp  smoke.cpp  sparse_matrix.cpp  truncated_monomial_space.cpp
tests/certificates/: gf5_x5_faithful.json
tests/oracles/: cotangent_h1_reference.sage
tests/python/: test_bindings.py
tests/support/: e10_fixture.hpp
tools/: laughable_jg_verify.py
